// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkeletonTableHead component should render correctly with Th element columns without nesting 1`] = `
<div>
  <table
    class="pf-v6-c-table pf-m-grid-md"
    data-ouia-component-id="OUIA-Generated-Table-3"
    data-ouia-component-type="PF6/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class="pf-v6-c-table__thead"
      data-ouia-component-id="SkeletonTableHeader-thead"
    >
      <tr
        class="pf-v6-c-table__tr"
        data-ouia-component-id="SkeletonTableHeader-tr-head"
        data-ouia-component-type="PF6/TableRow"
        data-ouia-safe="true"
      >
        <th
          class="pf-v6-c-table__th pf-v6-c-table__sort"
          scope="col"
          tabindex="-1"
        >
          <button
            class="pf-v6-c-table__button"
            type="button"
          >
            <div
              class="pf-v6-c-table__button-content"
            >
              <span
                class="pf-v6-c-table__text"
              >
                First
              </span>
              <span
                class="pf-v6-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
        <th
          class="pf-v6-c-table__th pf-v6-c-table__sort"
          scope="col"
          tabindex="-1"
        >
          <button
            class="pf-v6-c-table__button"
            type="button"
          >
            <div
              class="pf-v6-c-table__button-content"
            >
              <span
                class="pf-v6-c-table__text"
              >
                Second
              </span>
              <span
                class="pf-v6-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`SkeletonTableHead component should render correctly with count 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        class="pf-v6-c-table pf-m-grid-md"
        data-ouia-component-id="OUIA-Generated-Table-1"
        data-ouia-component-type="PF6/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v6-c-table__thead"
          data-ouia-component-id="SkeletonTableHeader-thead"
        >
          <tr
            class="pf-v6-c-table__tr"
            data-ouia-component-id="SkeletonTableHeader-tr-head"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v6-c-table__th"
              scope="col"
              tabindex="-1"
            >
              <span
                class="pf-v6-u-screen-reader"
              >
                Data expansion table header cell
              </span>
            </th>
            <th
              class="pf-v6-c-table__th"
              scope="col"
              tabindex="-1"
            >
              <span
                class="pf-v6-u-screen-reader"
              >
                Data selection table header cell
              </span>
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="SkeletonTableHeader-th-0"
              scope="col"
              tabindex="-1"
            >
              <div
                class="pf-v6-c-skeleton"
              >
                <span
                  class="pf-v6-screen-reader"
                />
              </div>
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="SkeletonTableHeader-th-1"
              scope="col"
              tabindex="-1"
            >
              <div
                class="pf-v6-c-skeleton"
              >
                <span
                  class="pf-v6-screen-reader"
                />
              </div>
            </th>
          </tr>
        </thead>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      class="pf-v6-c-table pf-m-grid-md"
      data-ouia-component-id="OUIA-Generated-Table-1"
      data-ouia-component-type="PF6/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class="pf-v6-c-table__thead"
        data-ouia-component-id="SkeletonTableHeader-thead"
      >
        <tr
          class="pf-v6-c-table__tr"
          data-ouia-component-id="SkeletonTableHeader-tr-head"
          data-ouia-component-type="PF6/TableRow"
          data-ouia-safe="true"
        >
          <th
            class="pf-v6-c-table__th"
            scope="col"
            tabindex="-1"
          >
            <span
              class="pf-v6-u-screen-reader"
            >
              Data expansion table header cell
            </span>
          </th>
          <th
            class="pf-v6-c-table__th"
            scope="col"
            tabindex="-1"
          >
            <span
              class="pf-v6-u-screen-reader"
            >
              Data selection table header cell
            </span>
          </th>
          <th
            class="pf-v6-c-table__th"
            data-ouia-component-id="SkeletonTableHeader-th-0"
            scope="col"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-skeleton"
            >
              <span
                class="pf-v6-screen-reader"
              />
            </div>
          </th>
          <th
            class="pf-v6-c-table__th"
            data-ouia-component-id="SkeletonTableHeader-th-1"
            scope="col"
            tabindex="-1"
          >
            <div
              class="pf-v6-c-skeleton"
            >
              <span
                class="pf-v6-screen-reader"
              />
            </div>
          </th>
        </tr>
      </thead>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SkeletonTableHead component should render correctly with string columns 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        class="pf-v6-c-table pf-m-grid-md"
        data-ouia-component-id="OUIA-Generated-Table-2"
        data-ouia-component-type="PF6/Table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class="pf-v6-c-table__thead"
          data-ouia-component-id="SkeletonTableHeader-thead"
        >
          <tr
            class="pf-v6-c-table__tr"
            data-ouia-component-id="SkeletonTableHeader-tr-head"
            data-ouia-component-type="PF6/TableRow"
            data-ouia-safe="true"
          >
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="SkeletonTableHeader-th-0"
              scope="col"
              tabindex="-1"
            >
              First
            </th>
            <th
              class="pf-v6-c-table__th"
              data-ouia-component-id="SkeletonTableHeader-th-1"
              scope="col"
              tabindex="-1"
            >
              Second
            </th>
          </tr>
        </thead>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      class="pf-v6-c-table pf-m-grid-md"
      data-ouia-component-id="OUIA-Generated-Table-2"
      data-ouia-component-type="PF6/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class="pf-v6-c-table__thead"
        data-ouia-component-id="SkeletonTableHeader-thead"
      >
        <tr
          class="pf-v6-c-table__tr"
          data-ouia-component-id="SkeletonTableHeader-tr-head"
          data-ouia-component-type="PF6/TableRow"
          data-ouia-safe="true"
        >
          <th
            class="pf-v6-c-table__th"
            data-ouia-component-id="SkeletonTableHeader-th-0"
            scope="col"
            tabindex="-1"
          >
            First
          </th>
          <th
            class="pf-v6-c-table__th"
            data-ouia-component-id="SkeletonTableHeader-th-1"
            scope="col"
            tabindex="-1"
          >
            Second
          </th>
        </tr>
      </thead>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
